--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "update": "pnpm dlx @astrojs/upgrade"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.3.0",
-    "@astrojs/netlify": "^6.4.1",
+    "@astrojs/mdx": "^4.3.1",
+    "@astrojs/netlify": "^6.5.1",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.1",
     "@tailwindcss/vite": "^4.1.11",
-    "astro": "^5.11.0",
+    "astro": "^5.12.0",
     "astro-icon": "^1.1.5",
     "sharp": "^0.34.2",
     "tailwindcss": "^4.1.11"
